src/styles/pages/Home.module.css
.container {
  height: 100vh;
  max-width: 992px;
  margin: 0 auto;
  padding: 2.5rem 2rem;

  display: flex;
  flex-direction: column;
}

.container section {
  flex: 1;

  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 6.25; /* 100px */
  align-content: center;
}

